# sgp

./: .gitignore  configure.ac  sgp.spec
src/: Makefile.am  gpupdate.c  setup.py  sgp.in  sgp.spec
src/gp_exts/: __init__.py  gp_file_append.py  gp_user_ext.py
src/gp_exts/gpmachine/: gp_env_var_ext.py  gp_vgp_smb_conf_ex.py
src/gp_exts/gpuser/: gp_browser_ext.py
src/gp_exts/machine/: gp_env_var_ext.py
src/gp_exts/user/: gp_browser_ext.py
